Refs #56547 fix button arrow size and alignment

--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -73,7 +73,9 @@
       @include icon('arrow_forward');
       display: inline-block;
       vertical-align: middle;
-      margin-left: .75rem;
+      margin-left: .875rem;
+      font-size: 1.5rem;
+      line-height: 0;
     }
   }
 
@@ -83,6 +85,7 @@
       display: inline-block;
       vertical-align: bottom;
       margin-left: .75rem;
+
     }
   }
 
